--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   ],
   "main": "src/index.js",
   "dependencies": {
+    "prop-types": "15.7.2",
     "react": "17.0.0",
     "react-dom": "17.0.0",
     "react-scripts": "3.4.3",
