--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   ],
   "main": "src/index.js",
   "dependencies": {
+    "@material-ui/core": "4.11.2",
+    "@material-ui/icons": "4.11.2",
     "prop-types": "15.7.2",
     "react": "17.0.0",
     "react-dom": "17.0.0",
