--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "17.0.0",
     "react-dom": "17.0.0",
     "react-scripts": "3.4.3",
+    "react-spring": "8.0.27",
     "uuid": "8.3.1"
   },
   "devDependencies": {
